//using FinanceTracker.Models;

//namespace FinanceTracker.Services.Interfaces
//{
//    public interface IPaycheckService
//    {
//        Task<decimal> CalculateSalaryAfterTax(Job job);
//        Task<decimal> CalculateTaxDeduction(Job job);
//        Task<decimal> CalculateSalaryBeforeTax(Job job);
//        Task<TimeSpan> CalculateWorkedHours(PaycheckInfo paycheckInfo);
//        //Task<List<WorkShift>> GetWorkShiftsAsync(int paycheckInfoId);
//    }
//}
